--- a/APPVIEW/Views/Account/Edit.cshtml
+++ b/APPVIEW/Views/Account/Edit.cshtml
@@ -7,7 +7,9 @@
 }
 
 <div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="py-3 mb-4"><span class="text-muted fw-light"></span> Account</h4>
+    <div class="card-header">
+        <h5 class="card-title">Account</h5>
+    </div>
     <form asp-action="Edit" method="post" enctype="multipart/form-data">
         <div class="row">
             <div class="col-md-12">
@@ -91,6 +93,14 @@
                                         }
                                     </select>
                                 </div>
+                            </div>
+                            <div class="col-md-3">
+                                <select asp-for=Status id="FilterTransaction" class="form-select text-capitalize">
+                                    <option value=""> Select Status </option>
+                                    <option value="2" class="text-capitalize">Blocked</option>
+                                    <option value="1" class="text-capitalize">Active</option>
+                                    <option value="0" class="text-capitalize">Inactive</option>
+                                </select>
                             </div>
                         </div>
                         <div class="mt-4">
