--- a/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
@@ -7,6 +7,7 @@
 
 <div class="container-xxl flex-grow-1 container-p-y">
     <div class="row gy-4">
+
         <!-- Congratulations card -->
         <div class="col-md-12 col-lg-4">
             <div class="card">
@@ -136,6 +137,7 @@
         </div>
         <!--/ Weekly Overview Chart -->
         <!-- Total Earnings -->
+
         <div class="col-xl-6 col-md-6">
             <div class="card">
                 <div class="card-header">
@@ -164,116 +166,9 @@
                 </div>
             </div>
         </div>
-        <script>
-            $(document).ready(function () {
-                var yearlyChart;
 
-                var currentYear = new Date().getFullYear();
-                $('#select').val(currentYear);
-
-                DrawChartForYear(currentYear);
-                DrawWeeklyOverviewChart();
-
-                $('#select').on('change', function () {
-                    var selectedYear = $(this).val();
-                    DrawChartForYear(selectedYear);
-                });
-                // Hàm vẽ biểu đồ với dữ liệu từ API
-                function DrawChart(data) {
-                    const ctx = document.getElementById('revenueChart').getContext('2d');
-                    if (yearlyChart) {
-                        yearlyChart.distroy()
-                    }
-                    // Mảng chứa giá trị của 12 tháng
-                    var monthsData = new Array(12).fill(0);
-
-                    // Ánh xạ dữ liệu từ API vào mảng đầy đủ của 12 tháng
-                    data.values.forEach(function (value, index) {
-                        var monthIndex = data.labels[index] - 1;
-                        monthsData[monthIndex] = value;
-                    });
-
-                    myChart = new Chart(ctx, {
-                        type: 'bar',
-                        data: {
-                            labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
-                            datasets: [{
-                                label: data.label,
-                                data: monthsData,
-                                borderWidth: 1
-                            }]
-                        },
-                        options: {
-                            scales: {
-                                y: {
-                                    beginAtZero: true
-                                }
-                            }
-                        }
-                    });
-                }
-                function DrawChartForYear(selectedYear) {
-                    $.ajax({
-                        url: 'https://localhost:7042/api/Chart/' + selectedYear,
-                        method: 'GET',
-                        dataType: 'json',
-                        success: function (data) {
-                            if (data && data.values && data.label) {
-                                DrawChart(data);
-                            } else {
-                                console.error('Invalid data received from API');
-                            }
-                        },
-                        error: function (error) {
-                            console.error('Error fetching data:', error);
-                        }
-                    });
-                }
-
-                function DrawWeeklyOverviewChart() {
-                    $.ajax({
-                        url: 'https://localhost:7042/api/Chart/weekly',
-                        method: 'GET',
-                        dataType: 'json',
-                        success: function (data) {
-                            if (data && data.labels && data.values && data.label) {
-                                DrawWeeklyChart(data);
-                            } else {
-                                console.error('Invalid data received from API');
-                            }
-                        },
-                        error: function (error) {
-                            console.error('Error fetching data:', error);
-                        }
-                    });
-                }
-                // Hàm vẽ biểu đồ theo tuần
-                function DrawWeeklyChart(data) {
-                    const ctx = document.getElementById('weeklyChartview');
-                    if (ctx) {
-                        weeklyChart = new Chart(ctx, {
-                            type: 'bar',
-                            data: {
-                                labels: data.labels,
-                                datasets: [{
-                                    label: data.label,
-                                    data: data.values,
-                                    borderWidth: 1
-                                }]
-                            },
-                            options: {
-                                scales: {
-                                    y: {
-                                        beginAtZero: true
-                                    }
-                                }
-                            }
-                        });
-                }
-            });
-        </script>   
         <!--/ Total Earnings -->
-        <!-- Four Cards -->
+@*         <!-- Four Cards -->
         <div class="col-xl-4 col-md-6">
             <div class="row gy-4">
                 <!-- Total Profit line chart -->
@@ -375,7 +270,7 @@
                 </div>
                 <!--/ Sessions chart -->
             </div>
-        </div>
+        </div> *@
         <!--/ Total Earning -->
         <!-- Sales by Countries -->
         <div class="col-xl-4 col-md-6">
@@ -868,7 +763,206 @@
             </div>
         </div>
         <!--/ Data Tables -->
+
+
+
+
+
+        <!--/Script xử lí -->
+
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+        <script>
+            let yearlyChart;
+            var weeklyChart;
+
+
+            $(document).ready(function () {
+                // Khởi tạo biểu đồ ban đầu
+
+                // Mặc định chọn năm hiện tại
+                var currentYear = new Date().getFullYear();
+
+                // var currentDay = new Date();
+
+
+                $('#select').val(currentYear);
+
+                if (yearlyChart) {
+                    yearlyChart.destroy();
+                }
+
+                // Gọi hàm vẽ biểu đồ khi trang web được tải
+                DrawChartForYear(currentYear);
+                DrawWeeklyOverviewChart();
+
+                // Gọi hàm vẽ biểu đồ khi có sự kiện thay đổi năm
+                $('#select').on('change', function () {
+                    var selectedYear = $(this).val();
+                    DrawChartForYear(selectedYear);
+                });
+
+
+
+                // Hàm vẽ biểu đồ với dữ liệu từ API
+                function DrawChart(data) {
+
+                    // Xoá bảng cữ  (nếu tồn tại)
+                    if (yearlyChart) {
+                        yearlyChart.destroy();
+                    }
+                    const ctx = document.getElementById('revenueChart').getContext('2d');
+                    // Mảng chứa giá trị của 12 tháng
+                    var monthsData = new Array(12).fill(0);
+
+                    // Ánh xạ dữ liệu từ API vào mảng đầy đủ của 12 tháng
+                    data.values.forEach(function (value, index) {
+                        // Tháng được trả về từ API là 1-indexed, chuyển về 0-indexed
+                        var a = data.labels[index] - 1;
+
+                        monthsData[a] = value;
+                    });
+
+
+                    yearlyChart = new Chart(ctx, {
+                        type: 'bar',
+                        data: {
+                            labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+                            datasets: [{
+                                label: data.label,
+                                data: monthsData,
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                y: {
+                                    beginAtZero: true
+                                }
+                            }
+                        }
+                    });
+                }
+
+
+                // Hàm gọi API và vẽ biểu đồ cho năm được chọn
+                function DrawChartForYear(selectedYear) {
+                    // test case = 2023
+                    // Gửi yêu cầu Ajax để lấy dữ liệu
+                    $.ajax({
+                        url: 'https://localhost:7042/api/Chart/' + selectedYear,
+                        method: 'GET',
+                        dataType: 'json',
+                        success: function (data) {
+                            // console.log(data);
+                            // Nếu có dữ liệu từ API, gọi hàm để vẽ biểu đồ
+                            if (data && data.values && data.label) {
+                                DrawChart(data);
+                            } else {
+                                console.error('Invalid data received from API');
+                            }
+                        },
+                        error: function (error) {
+                            console.error('Error fetching data:', error);
+                        }
+                    });
+                }
+
+
+                function DrawWeeklyChart(data) {
+                    // var currentDay = new Date('12/1/2023');
+                    var currentDay = new Date();
+                    // test 30/11 ok
+                    const ctx = document.getElementById('weeklyChartview').getContext('2d');
+                    if (weeklyChart) {
+                        weeklyChart.destroy();
+                    }
+
+                    // Mảng chứa giá trị của 7 ngày gần nhất
+                    var dayData = new Array(7).fill(0);
+
+                    // Mảng chứa nhãn của 7 ngày gần nhất với định dạng ngày/tháng
+                    var labels = [];
+                    for (var i = 6; i >= 0; i--) {
+                        var date = new Date(currentDay);
+                        date.setDate(currentDay.getDate() - i);
+                        labels.push(`${date.getDate()}/${date.getMonth() + 1}`);
+                    }
+
+                    // 28/11 29/11 30/11 01/12 02/12 03/12 04/12
+                    // 00000 00001 00002 00003 00004 00005 00006
+                    //   i =2 ;
+                    //  j = i >> j = 2;
+                    var z = labels[0].slice(0, 2);
+                    console.log(z); //z =22
+                    var j = 0;
+
+                    // Ánh xạ dữ liệu từ API vào mảng của 7 ngày gần nhất
+                    data.values.forEach(
+
+                        function (value, index) {
+                            j = index + 1;
+                            // 11/25/2023
+                            // 25/11
+                            var day = data.labels[index].slice(3, 5); //11/25
+                            // console.log(day);//25
+
+                            var dayIndex = day - z;
+
+                            if (dayIndex < 0) {
+                                dayData[j++] = value;
+                            }
+                            else {
+                                dayData[dayIndex] = value;
+                            }
+                        }
+
+                    );
+
+                    weeklyChart = new Chart(ctx, {
+                        type: 'bar',
+                        data: {
+                            labels: labels,
+                            datasets: [{
+                                label: data.label,
+                                data: dayData,
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                y: {
+                                    beginAtZero: true
+                                }
+                            }
+                        }
+                    });
+                }
+
+                function DrawWeeklyOverviewChart() {
+                    $.ajax({
+                        url: 'https://localhost:7042/api/Chart/weekly',
+                        method: 'GET',
+                        dataType: 'json',
+                        success: function (data) {
+                            // console.log(data);
+                            if (data && data.labels && data.values && data.label) {
+                                DrawWeeklyChart(data);
+
+                            } else {
+                                console.error('Invalid data received from API');
+                            }
+                        },
+                        error: function (error) {
+                            console.error('Error fetching data:', error);
+                        }
+                    });
+                }
+            });
+        </script>
     </div>
+
 </div>
 
 
