--- a/APPVIEW/Views/Home/Thongtin.cshtml
+++ b/APPVIEW/Views/Home/Thongtin.cshtml
@@ -8,7 +8,7 @@
     List<Product> prd = ViewBag.viewprd;
     List<Size> size = ViewBag.sizee;
     List<Color> color = ViewBag.Collor;
-
+    List<Image> image = ViewBag.image;
 }
 
 <h3 style="text-align:center">Đơn hàng của bạn </h3>
