--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -150,24 +150,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="menu-item active ">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons mdi mdi-security"></i>
-                            <div data-i18n="Dashboards">Manage access</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item ">
-                                <a href="~/Role/getlist" class="menu-link">                                    
-                                    <div data-i18n="Analytics">Roles</div>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
                     <!-- Layouts -->
                     <li class="menu-item active open">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons mdi mdi-receipt-text"></i>
-                            <div data-i18n="Dashboards">Bill management</div>
+                            <div data-i18n="Dashboards">Quản Lý Hóa Đơn</div>
                         </a>
 
                         <ul class="menu-sub">
@@ -182,19 +169,14 @@
                                 <a href="~/QLBills/ShowBillXacNhan" class="menu-link">
 
                                     <span class="mdi mdi-receipt-text-check"></span>
-                                   
+
 
                                     <div data-i18n="Without menu">Hóa Đơn Đã Xác Nhận</div>
                                 </a>
-                            </li>  <li class="menu-item">
-                                <a href="~/QLBills/DonHuy" class="menu-link">
-                                    <div data-i18n="Without menu">Hóa Đơn Chờ Xác Nhận Hủy</div>
-                                </a>
                             </li>
                             <li class="menu-item">
-                                <a href="~/Role/getlist" class="menu-link">
-                                    <div data-i18n="Without menu">Role</div>
-
+                                <a href="~/QLBills/DonHuy" class="menu-link">
+                                    <div data-i18n="Without menu">Hóa Đơn Chờ Xác Nhận Hủy</div>
                                 </a>
                             </li>
                             <li class="menu-item">
@@ -212,7 +194,7 @@
                     <li class="menu-item active ">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons mdi mdi-account"></i>
-                            <div data-i18n="Dashboards">User management </div>
+                            <div data-i18n="Dashboards">Quản Lý User </div>
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item ">
@@ -227,12 +209,17 @@
                                     <div data-i18n="Layouts"> Address </div>
                                 </a>
                             </li>
+                            <li class="menu-item ">
+                                <a href="~/Role/getlist" class="menu-link">
+                                    <div data-i18n="Analytics">Roles</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item active ">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons mdi mdi-store"></i>
-                            <div data-i18n="Dashboards">Store Management </div>
+                            <div data-i18n="Dashboards">Quản Lý Sản Phẩm </div>
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item ">
