--- a/APPVIEW/Views/ProductDetail/GetList.cshtml
+++ b/APPVIEW/Views/ProductDetail/GetList.cshtml
@@ -1,5 +1,7 @@
-﻿@model IEnumerable<APPDATA.Models.ProductDetail>
-
+﻿@model X.PagedList.IPagedList<APPDATA.Models.ProductDetail>
+@using X.PagedList.Web.Common
+@using X.PagedList
+@using X.PagedList.Mvc.Core
 @{
     ViewData["Title"] = "GetList";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -7,12 +9,7 @@
 }
 
 
-<form asp-controller="productdetail" asp-action="getlist" class="row contact_form" method="post">
-    <div class="col-md-5 form-group">
-        <input type="text" class="form-control" name="tk" placeholder="Nhập tên sản phẩm để tìm kiếm">
-        <button type="submit" style="background-color:brown ; color:black">Search</button>
-    </div>
-</form>
+
 
 <div class="card">
     <div class="card-header">
@@ -22,54 +19,67 @@
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
             <span class="mdi mdi-plus-thick">Create new</span>
         </a>
+      <form asp-controller="productdetail" asp-action="getlist" class="row contact_form" method="post">
+    <div class="col-md-5 form-group" style="margin-right:50px">
+        <input type="text" class="form-control" name="tk" placeholder="Nhập tên sản phẩm để tìm kiếm">
+        <button type="submit" style="background-color:brown ; color:black">Search</button>
+    </div>
+      @*<div class="input-group mb-3">
+            <input type="text" name="tk" class="form-control" placeholder="Tìm kiếm" aria-label="Tìm kiếm" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i class="fas fa-search"></i>Tìm kiếm</button>
+        </div>*@
+    </form>
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>STT</th>
                         <th>Name</th>
+                        <th>IMG</th>
                         <th>Category</th>
                         <th>Size</th>
                         <th>Material</th>
                         <th>Color</th>
                         <th>Supplier</th>
                         <th>Quantity</th>
-                        <th>
-                            Price
-                        </th>
-                        <th>
-                            Status
-                        </th>                      
-                        <th>
-                            Create_date
-                        </th>
-                        <th>
-                            Update_date
-                        </th>
-                        <th>
+                        <th> Price</th>
+                        <th> Status</th>
+                        <th>Create_date </th>
+                        <th> Update_date </th>
+@*                        <th>
                             Create_by
                         </th>
                         <th>
                             Update_by
-                        </th>
-                        <th>
-                            IMG
-                        </th>
-                      
+                        </th>*@
+
+
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
-                     @if (Model != null && Model.Any())
+                    @if (Model != null && Model.Any())
                     {
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td>@(
-                                    stt += 1
-                                    )</td>
+                                <td>
+                                    @(
+                            stt += 1
+                            )
+                                </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @foreach (var obj in ViewBag.Image)
+                                    {
+                                        if (item.Id == obj.IdProductdetail)
+                                        {
+                                            <img src="~/images/@obj.Name" alt="Fjords" width="90px" height="90px">
+                                            break;
+                                        }
+                                    }
                                 </td>
                                 <td>
                                     @foreach (var obj in ViewBag.Category)
@@ -130,7 +140,7 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Quantity)
                                 </td>
-                              
+
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Price)
                                 </td>
@@ -156,37 +166,29 @@
                                     }
                                     @formattedUpdateDate
                                 </td>
-                                <td>
+@*                                <td>
                                     @Html.DisplayFor(modelItem => item.Create_by)
                                 </td>
 
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Update_by)
-                                </td>
+                                </td>*@
 
-                                <td>
-                                    @foreach (var obj in ViewBag.Image)
-                                    {
-                                        if (item.Id == obj.IdProductdetail)
-                                        {
-                                            <img src="~/images/@obj.Name" alt="Fjords" width="50px" height="50px">
-                                            break;
-                                        }
-                                    }
-                                </td>
+
 
                                 <td>
 
-                                    <a href="@Url.Action("Edit", new { id = item.Id  })" class="btn btn-info waves-effect waves-light">
+                                    <a href="@Url.Action("Edit", new { id = item.Id  })" class="btn btn-info waves-effect waves-light" >
                                         <span class="mdi mdi-pencil-box-outline"></span>Edit
-                                    </a> <a href="@Url.Action( "Details","Home", new { id = item.Id  })" class="btn btn-info waves-effect waves-light">
-                                        <span class="mdi mdi-pencil-box-outline"></span>Details
+                                    </a> <a href="@Url.Action( "Details","Home", new { id = item.Id  })" class="btn btn-warning waves-effect waves-light" >
+                                        <span class="mdi mdi-pencil-box-outline"></span>Details 
                                     </a>
                                     <a href="@Url.Action("Delete", new { id = item.Id  })" class="btn btn-danger waves-effect waves-light">
                                         <span class="mdi mdi-delete"></span>Delete
                                     </a>
                                 </td>
                             </tr>
+
                         }
                     }
                     else
@@ -195,9 +197,37 @@
                             <td colspan="8" class="text-center">No Data.</td>
                         </tr>
                     }
+
                 </tbody>
-             
             </table>
         </div>
     </div>
+
+</div>
+@*<div class="col-12">
+    <nav>
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled"><a class="page-link" href="#">Previous</span></a></li>
+            @for (int i = 1; i <= Model.PagingInfo.TotalPages; i++)
+            {
+                <li class="page-item"><a class="page-link" href="/ProductDetalis/GetList?ProductPage=@i">@i</a></li>
+
+            }
+            <li class="page-item"><a class="page-link" href="">Next</a></li>
+        </ul>
+    </nav>
+</div>*@
+<div>
+    @Html.PagedListPager(Model, page => Url.Action("GetList", new {page = page, sort=ViewBag.sort}), new PagedListRenderOptions()
+    {
+    ActiveLiElementClass = "active",
+    PageClasses = new[]{ "page-link"},
+    LiElementClasses=new[] { "page-item"},
+    UlElementClasses = new[] { "pagination","justify-content-center", "mt-3", "size" },
+    LinkToNextPageFormat = "Next",
+    LinkToPreviousPageFormat = "Previous",
+    MaximumPageNumbersToDisplay = 8,
+    DisplayLinkToPreviousPage = PagedListDisplayMode.Always,
+    DisplayLinkToNextPage = PagedListDisplayMode.Always
+    })
 </div>
