--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -79,7 +79,8 @@
                                                         </div>
                                                     </div>
                                                 </td>
-                                        }
+                                                break;
+                                            }
                                     }
                                         <td >@Model[i].Price</td>
                                         <td>
