--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -100,6 +100,8 @@
                             </div>    
                             <input name="pay" id="pay" hidden value="shipcod" />
                             <input name="voucher" id="voucher" hidden value="@ViewBag.DiscountAmount" />
+                            <input name="phiship" id="voucher" hidden value="@ViewBag.fee"/>
+                            <input name="vouchercode" id="voucher" hidden value="@ViewBag.VoucherCode" />
                         <div class="text-center  form-group">
                             <button type="submit" class="button button-paypal" id="btncf" >Order Confirmation</button>
                         </div>
