--- a/APPVIEW/Views/Home/PaymentConfirm.cshtml
+++ b/APPVIEW/Views/Home/PaymentConfirm.cshtml
@@ -4,6 +4,22 @@
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
 }
 
-<h1>PaymentConfirm</h1>
+<h1 style="color:forestgreen">Đặt hàng thành công</h1>
+<h2 style="margin-top:50px">Thông tin đơn hàng</h2>
 
-<h1>@ViewBag.Message</h1>
+<div style="margin-left:100px;color:black;font-size:25px">
+    <span>Trạng thái đơn hàng : @if (ViewBag.Bill.Status == 1)
+        {
+            <span>Chờ xác nhận</span>
+        }   </span>
+    <p>Tên sản phẩm : @ViewBag.sp.Name </p>
+    <p>Tổng tiền : @ViewBag.Bill.TotalMoney</p>
+    <p>Mã hóa đơn : @ViewBag.Bill.Code </p>
+    <p>SDT người dùng : @ViewBag.Bill.PhoneNumber</p>
+    <p>Địa chỉ : @ViewBag.Bill.Address</p>
+    <p>Ngày tạo : @ViewBag.Bill.CreateDate </p>
+    <p>Số lượng : @ViewBag.Billct.Amount </p>
+    <p>Size : @ViewBag.sizee.Name </p>
+    <p>Màu : @ViewBag.Collor.Name </p>
+
+</div>
