--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="~/contentwebb/vendors/nice-select/nice-select.css">
     <link rel="stylesheet" href="~/contentwebb/vendors/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="~/contentwebb/vendors/owl-carousel/owl.carousel.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="~/contentwebb/css/style.css" rel="stylesheet" />
     <link href="~/contentwebb/css/main.css" rel="stylesheet" />
 
