--- a/APPVIEW/Views/QLBills/DonHuy.cshtml
+++ b/APPVIEW/Views/QLBills/DonHuy.cshtml
@@ -21,7 +21,7 @@
 <form asp-controller="QLBills" asp-action="ShowBill" class="row contact_form" method="post">
     <div class="col-md-5 form-group">
         <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
-        <button type="submit" style="background-color:brown ; color:black">Search</button>
+        <button type="submit" class="btn btn-info waves-effect waves-light">Search</button>
     </div>
 </form>
 <table class="table">
@@ -145,7 +145,7 @@
                 </td>
 
                 <td>
-                    <button style="background-color:coral"> @Html.ActionLink("Xác nhận hủy đơn hàng ", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
+                    <button class="btn btn-info waves-effect waves-light"> @Html.ActionLink("Xác nhận hủy đơn hàng ", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
 
                 </td>
             </tr>
