--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -224,6 +224,12 @@
                                         <div data-i18n="Layouts"> Accounts </div>
                                     </a>
                                 </li>
+                                <li class="menu-item ">
+                                    <a href="~/Account/AccountBlockedAll" class="menu-link">
+                                        <i class="mdi mdi-account-cancel"></i>
+                                        <div data-i18n="Layouts"> Accounts Blockeds </div>
+                                    </a>
+                                </li>
                                 <li class="menu-item">
                                     <a href="~/Address/getlist" class="menu-link">
                                         <i class="mdi mdi-map-marker"></i>
@@ -350,6 +356,12 @@
                                             <div data-i18n="Layouts"> Accounts </div>
                                         </a>
                                     </li>
+                                <li class="menu-item ">
+                                    <a href="~/Account/AccountBlockedAll" class="menu-link">
+                                        <i class="mdi mdi-account-cancel"></i>
+                                        <div data-i18n="Layouts"> Accounts Blockeds </div>
+                                    </a>
+                                </li>
                                     <li class="menu-item">
                                         <a href="~/Address/getlist" class="menu-link">
                                             <i class="mdi mdi-map-marker"></i>
