Fix thống kê ngày

--- a/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
@@ -941,7 +941,7 @@
                             dayIndex = daydate - z;
 
                             if (dayIndex < 0) {
-                                dayData[biengancuaIndex] = value;
+                                dayData[biengancuaIndex++] = value;
                             }
                             else {
                                 dayData[dayIndex] = value;
