--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -40,8 +40,9 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col">Name</th> 
                             <th scope="col">Images</th>
+                            <th scope="col">Name</th> 
+                           
                             <th scope="col">Price</th>
                             <th scope="col">Quantity</th>
                             <th scope="col">Size</th>
@@ -82,6 +83,7 @@
                                                 break;
                                             }
                                     }
+                                        <td >@Model[i].Name</td>
                                         <td >@Model[i].Price</td>
                                         <td>
                                          
